# fmralign

./: .pre-commit-config.yaml  README.md  authors.html  bibliography.html  index.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  sg_execution_times.html  user_guide.html  whats_new.html
.github/workflows/: code_style.yml  doc-build.yml  testing.yml
_downloads/0b52291c5d4529d22a4b2d1ae507b098/: plot_pairwise_alignment.ipynb
_downloads/2ff943af0a8e0286ca8d2b4198a71626/: plot_template_bias.ipynb
_downloads/6a8e52be39106976d962600901ce6235/: plot_template_alignment.ipynb
_downloads/7f3e9d12ad06b317d586125843d70ff5/: plot_surf_alignment.ipynb
_downloads/a9d2259c803687ed0b0d9f6c413722f5/: plot_group_alignment.ipynb
_downloads/acb66ee7f529e387ab2018ae6055b46c/: plot_alignment_simulated_2D_data.ipynb
_downloads/b885fb894b22be261ce320523a208b83/: plot_alignment_methods_benchmark.ipynb
_downloads/d5f9258ebaaa3446b17d5c0324441f8c/: plot_pairwise_roi_alignment.ipynb
_modules/: index.html
_modules/fmralign/: alignment_methods.html  pairwise_alignment.html  template_alignment.html
_sources/: sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt  plot_alignment_methods_benchmark.rst.txt  plot_alignment_simulated_2D_data.rst.txt  plot_group_alignment.rst.txt  plot_pairwise_alignment.rst.txt  plot_pairwise_roi_alignment.rst.txt  plot_template_alignment.rst.txt  plot_template_bias.rst.txt  sg_execution_times.rst.txt
_static/: custom.css
auto_examples/: index.html  plot_alignment_methods_benchmark.html  plot_alignment_simulated_2D_data.html  plot_group_alignment.html  plot_pairwise_alignment.html  plot_pairwise_roi_alignment.html  plot_template_alignment.html  plot_template_bias.html  sg_execution_times.html
doc/: Makefile  conf.py  index.rst  references.bib  soft_references.bib
doc/functional_alignment/: fmralign_pipeline.rst
doc/modules/: alignment.rst  embedding.rst  fmralign.embeddings.whole_brain.get_laplacian_embedding.rst  methods.rst  reference.rst
examples/: plot_alignment_methods_benchmark.py  plot_alignment_simulated_2D_data.py  plot_pairwise_alignment.py  plot_pairwise_roi_alignment.py  plot_surf_alignment.py  plot_template_alignment.py  plot_whole_brain_alignment.py
fmralign/: __init__.py  _utils.py  _versions.py  alignment.py
fmralign/alignment/: alignment.py  group_alignment.py  pairwise_alignment.py  utils.py
fmralign/embeddings/: connectivity.py  parcellation.py  whole_brain.py
fmralign/methods/: __init__.py  base.py  identity.py  optimal_transport.py  ot.py  piecewise.py  procrustes.py  ridge.py  srm.py  utils.py
fmralign/pairwise/: pairwise_alignment.py  utils.py
fmralign/template/: template_alignment.py  utils.py
functional_alignment/: fmralign_pipeline.html  index.html  introduction.html
modules/: alignment.html  embedding.html  fmralign.embeddings.connectivity.get_connectivity_features.html  fmralign.embeddings.parcellation.get_labels.html  fmralign.embeddings.whole_brain.get_adjacency_from_mask.html  fmralign.methods.DetSRM.html  fmralign.methods.Identity.html  fmralign.methods.OptimalTransport.html  fmralign.methods.Procrustes.html  fmralign.methods.RidgeAlignment.html  index.html  methods.html  reference.html
(+48 files in other folders)
