[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [
    {name = "Elizabeth DuPre", email = "emd222@cornell.edu"},
    {name = "Pierre-Louis Barbarant", email = "pierre-louis.barbarant@inria.fr"},
    {name = "Thomas Bazeille"},
    {name = "Bertrand Thirion"}
]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "nilearn>=0.13.0",
    "pot>=0.9.6",
    "robust-laplacian>=1.1.0",
    "torch>=2.12.1"
]
description = "Functional alignment for fMRI"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "fmralign"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
# Useful for development
dev = ["fmralign[doc,test]"]
# For building the documentation
doc = [
    "coverage>=7.0.0",
    "matplotlib>=3.10.9",
    "myst-parser>=3.0.1",
    "numpydoc>=1.10.0",
    "ruamel.yaml>=0.18.6",
    "sphinx>=7.4.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-gallery>=0.18.0",
    "sphinxcontrib-bibtex>=2.6.3",
    "sphinxext-opengraph>=0.9.1",
    "furo>=2024.8.6"
]
# For running unit and docstring tests
test = ["coverage>=7.0.0", "pytest>=6.0.0", "pytest-cov>=7.0.0", "numpydoc>=1.10.0"]

[tool.codespell]
check-hidden = true
ignore-words = '.github/codespell_ignore_words.txt'
# ignore-regex = ''
ignore-words-list = 'nd,ot'
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.css'

[tool.hatch.build.hooks.vcs]
version-file = "fmralign/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --doctest-modules --showlocals --capture=no -v"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
junit_family = "xunit2"
log_cli_level = "INFO"
log_level = "INFO"
minversion = "6.0"
testpaths = ["fmralign"]
xfail_strict = true

[tool.ruff]
extend-exclude = ["doc/auto_examples/*"]
include = [
    "pyproject.toml",
    "fmralign/**/*.py",
    "examples/**/*.py",
    "doc/**/*.py"
]
indent-width = 4
line-length = 79

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
ignore = [
    "E501"  # Line too long
]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I"  # isort
]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 41

[tool.ruff.lint.per-file-ignores]
"*/{tests}/*" = ["D100", "D101", "D102", "D103", "D104", "D205", "D400", "D401"]
"__init__.py" = ["D104", "E402"]
"{doc}/*" = ["D103"]
"{examples}/*" = ["B018", "D103", "D400", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-args
max-args = 26
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-branches
max-branches = 48
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-returns
max-returns = 7
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-statements
max-statements = 151
